test/zinc_source/compile_errors/callables/01_lambda_capture.zn
// expected-error: assignment to captured outer variable 'x' requires 'out x'
fn main() {
    x = 1
    f = fn() {
        x = x + 1
        return x
    }
    print(f())
}
